LOOKS: Fix portfolio display list for misaligned 3n-1th last child

--- a/source/stylesheets/partials/_portfoliolist.scss
+++ b/source/stylesheets/partials/_portfoliolist.scss
@@ -1,9 +1,19 @@
 ul.portfoliolist li {
   width: 13.5em;
+  figure figcaption {
+    white-space: nowrap;
+  }
   @media only screen and (min-width: 992px) and (max-width: 1200px) {
     width: 12.5em;
   }
   a {
     color: #000;
+  }
+  @media only screen and (max-width: 1200px) {
+    // fix spacing before 3n-1'th last child
+    &:nth-child(3n-1):last-child {
+      margin-right: auto;
+      margin-left: 4.5%
+    }
   }
 }
